--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,7 @@ body {
 nav {
     background-color: #333;
     color: white;
-    padding: 15px;
-    padding-left: 40px;
+    padding: 15px 15px 15px 40px;
     position: fixed;
     width: 100%;
     top: 0;
@@ -40,7 +39,7 @@ nav a {
 /* Main container */
 .container {
     max-width: 800px;
-    margin-top: 100px;
+    margin: 100px auto 0 auto;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -107,7 +106,7 @@ input {
 
 button {
     padding: 10px 15px;
-    font-size: 1em;
+    font: 1em Arial, sans-serif;
     background-color: #4CAF50;
     color: white;
     border: none;
