--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -1,14 +1,11 @@
 /* Add this to your styles.css to style the About page */
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+    padding: 10px;
     background-color: #f4f4f9;
     color: #333;
-    padding-top: 40px;
     display: flex;
     justify-content: center; /* Horizontally center the content */
-    align-items: center; /* Vertically center the content */
     height: 100vh; /* Make sure the body takes the full height of the screen */
     text-align: center; /* Center text */
 }
@@ -53,8 +50,8 @@ main {
 .about-box {
     background-color: white;
     color: #333;
-    padding: 55px;
-    margin: 20px 0; /* Add margin to separate boxes */
+    padding: 20px;
+    margin: 20px; /* Add margin to separate boxes */
     width: 80%; /* Set the width to 80% of the screen */
     max-width: 1200px; /* Optional: Prevent it from becoming too wide on large screens */
     border-radius: 8px; /* Rounded corners */
@@ -66,7 +63,7 @@ h1, h2 {
 }
 
 #introduction, #thank-you {
-    margin: 20px 0;
+    margin: 30px 0;
 }
 
 p {
